// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a snapshot 1`] = `
<div>
  <button
    class="btn btn--dark"
  >
    test
  </button>
</div>
`;

exports[`should create a snapshot: click 1`] = `
<div>
  <button
    className="btn btn--dark"
  >
    test
  </button>
</div>
`;
